# gl-utils

./: CMakeLists.txt  README.md
include/: algebra.h  common.h  gl-utils.h  gl-utils.hpp  input-manager.h  input-manager.hpp  mat.h  matrix.h  owner.h  vec.h  vertex-array-object.h  vertex-array.h  vertex-buffer.h  window.h  window.hpp
src/: input-manager.cc  input-manager.cpp  vertex-array-object.cc  window.cc  window.cpp
test/: CMakeLists.txt  test-gl-utils.cc  test-gl-utils.cpp  test-input-manager.cc  test-matrix.cc  test-vec.cc  test-vertex-array-object.cc  test-vertex-array.cc  test-vertex-buffer.cc  test-window.cc
